fix alignment and styling of pipeline icon

--- a/src/app/debug/duck/utils.module.scss
+++ b/src/app/debug/duck/utils.module.scss
@@ -9,7 +9,8 @@
 }
 
 .alignStatus {
-  width: 15em;
+  width: 17em;
+  min-width: 17em;
   margin-left: auto;
   text-align: left;
   overflow: hidden;
